Fix body bones lagging behind the head for NPCs